--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^4.0.5",
+    "@devexpress/dx-react-chart-material-ui": "^4.0.5",
+    "@devexpress/dx-react-core": "^4.0.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,8 +13,13 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
+    "react-modal-video": "^2.0.1",
+    "react-player": "^2.12.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "^2.1.3",
     "styled-components": "^6.0.0-rc.6",
     "typescript": "^4.9.5",
@@ -40,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-modal-video": "^1.2.0"
   }
 }
