--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^2.1.3",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "styled-components": "^6.0.0-rc.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
